# django_base

./: .env  .env.sample  DEV.md  Dockerfile  README.md  pyproject.toml
app/: views.py
app/templates/app/: index.html
config/: settings.py  urls.py
sample_app/: urls.py  views.py
sample_app/migrations/: 0001_initial.py
sample_app/templates/sample_app/: base.html  post_form.html  post_list.html
src/django_base/: __init__.py
