[project]
name = "django-base"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Ryu TANABE", email = "tanabe@eyetech.jp" }
]
dependencies = [
    "django>=5.0.7",
    "dj-database-url>=2.2.0",
    "python-dotenv>=1.0.1",
    "django-bootstrap5>=24.2",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/django_base"]

[tool.rye.scripts]
server = { cmd = "python manage.py runserver" }
manage = { cmd = "python manage.py " }
